Fix word break in event listing template

--- a/plone/app/event/browser/resources/event.css
+++ b/plone/app/event/browser/resources/event.css
@@ -52,7 +52,7 @@ article.vevent a.event_ical img {
     padding-top:0.3em;
 }
 .vevent span.cal_month {
-    font-size:1.3em;
+    font-size:1.1em;
     line-height:1.3em;
     background: #007bb3;
     display:block;
